--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PhotoGigs</string>
+
+    <string name="facebook_app_id">242880936560479</string>
+    <string name="fb_login_protocol_scheme">fb242880936560479</string>
+
 </resources>
